Changes to the Movie Clip Editor's grid color preferences do not take effect #42205

Closed
opened 2014-10-13 14:45:24 +02:00 by Seth L. · 8 comments

System Information
OS X 10.8.5 ATI Radeon HD 4850 512 MB

Blender Version
Broken: 2.72 95182d1

Short description of error
It appears that the Movie Clip Editor grid color cannot be adjusted. Changing the grid color setting does not have an effect.

Also the Video Sequence Editor and the Node Editor actually lack the option to change the grid color entirely, and while that may be by deliberate design I thought I should bring it up since other editors which have grids do offer that option.

Exact steps for others to reproduce the error

  1. Set part of your workspace to the Movie Clip Editor. Note the grid color.
  2. Open Blender's Preferences and go to the Themes tab.
  3. Navigate to the Movie Clip Editor section and under the Theme clip Editor heading find the color for "Grid".
  4. Change that color value and observe how the grid color in the Movie Clip Editor does not change.
**System Information** OS X 10.8.5 ATI Radeon HD 4850 512 MB **Blender Version** Broken: 2.72 95182d1 **Short description of error** It appears that the Movie Clip Editor grid color cannot be adjusted. Changing the grid color setting does not have an effect. Also the Video Sequence Editor and the Node Editor actually lack the option to change the grid color entirely, and while that may be by deliberate design I thought I should bring it up since other editors which have grids do offer that option. **Exact steps for others to reproduce the error** 1. Set part of your workspace to the Movie Clip Editor. Note the grid color. 2. Open Blender's Preferences and go to the Themes tab. 3. Navigate to the Movie Clip Editor section and under the Theme clip Editor heading find the color for "Grid". 4. Change that color value and observe how the grid color in the Movie Clip Editor does not change.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @quantumanomaly

Added subscriber: @quantumanomaly

Added subscribers: @Sergey, @ideasman42

Added subscribers: @Sergey, @ideasman42

Looks like this should simply be removed, its not used anywhere.

@Sergey ?

      diff --git a/source/blender/makesrna/intern/rna_userdef.c b/source/blender/makesrna/intern/rna_userdef.c
      index 976a89a..cfeac6a 100644
        - a/source/blender/makesrna/intern/rna_userdef.c
      +++ b/source/blender/makesrna/intern/rna_userdef.c
      @@ -2784,11 +2784,6 @@ static void rna_def_userdef_theme_space_clip(BlenderRNA *brna)
       	RNA_def_property_ui_text(prop, "Path After", "Color of path after current frame");
       	RNA_def_property_update(prop, 0, "rna_userdef_update");
       
    - prop = RNA_def_property(srna, "grid", PROP_FLOAT, PROP_COLOR_GAMMA);
    - RNA_def_property_array(prop, 3);
    - RNA_def_property_ui_text(prop, "Grid", "");
    - RNA_def_property_update(prop, 0, "rna_userdef_update");
    -
       	prop = RNA_def_property(srna, "frame_current", PROP_FLOAT, PROP_COLOR_GAMMA);
       	RNA_def_property_float_sdna(prop, NULL, "cframe");
       	RNA_def_property_array(prop, 3);
Looks like this should simply be removed, its not used anywhere. @Sergey ? ``` diff --git a/source/blender/makesrna/intern/rna_userdef.c b/source/blender/makesrna/intern/rna_userdef.c index 976a89a..cfeac6a 100644 ``` - a/source/blender/makesrna/intern/rna_userdef.c ``` +++ b/source/blender/makesrna/intern/rna_userdef.c @@ -2784,11 +2784,6 @@ static void rna_def_userdef_theme_space_clip(BlenderRNA *brna) RNA_def_property_ui_text(prop, "Path After", "Color of path after current frame"); RNA_def_property_update(prop, 0, "rna_userdef_update"); ``` - prop = RNA_def_property(srna, "grid", PROP_FLOAT, PROP_COLOR_GAMMA); - RNA_def_property_array(prop, 3); - RNA_def_property_ui_text(prop, "Grid", ""); - RNA_def_property_update(prop, 0, "rna_userdef_update"); - ``` prop = RNA_def_property(srna, "frame_current", PROP_FLOAT, PROP_COLOR_GAMMA); RNA_def_property_float_sdna(prop, NULL, "cframe"); RNA_def_property_array(prop, 3); ```

Yes, think so. Do you mind comitting?

Yes, think so. Do you mind comitting?

This issue was referenced by 8e1ae537dd

This issue was referenced by 8e1ae537dd9837d115ebddce62a9b417a3efc446

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8e1ae537dd.

Closed by commit 8e1ae537dd.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42205
No description provided.