Fix T42205: MovieClip ignores grid color